# pressure

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start.sh  start_docker.sh
heartrate/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
heartrate/migrations/: 0001_initial.py  0002_user_email_user_username.py  0003_alter_heartrate_user_delete_user.py  0004_alter_heartrate_user.py
pressure/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
templates/: base.html  index.html  login.html
templates/heartrate/: form.html  heartrate.html  list.html
uttils/: code.py  code_spo2.py
