[project]
name = "pressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-htmx>=1.21.0",
    "django-widget-tweaks>=1.5.0",
]
