[project]
name = "pressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-htmx>=1.21.0",
    "django-widget-tweaks>=1.5.0",
    "pyband>=0.2.8",
    "bluepy>=1.3.0",
    "dj-database-url>=2.3.0",
    "python-dotenv>=1.0.1",
    "psycopg-binary>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
]
